handoff clients to its original agent after recovery

--- a/controller/src/main/resources/floodlightdefault.properties
+++ b/controller/src/main/resources/floodlightdefault.properties
@@ -11,5 +11,6 @@ net.floodlightcontroller.core.FloodlightProvider.openflowport = 6633
 net.floodlightcontroller.jython.JythonDebugInterface.port = 6655
 net.floodlightcontroller.odin.master.OdinMaster.masterPort = 2819
 net.floodlightcontroller.odin.master.OdinMaster.poolFile = poolfile
+net.floodlightcontroller.odin.master.OdinMaster.idleLvapTimeout = 3600
 net.floodlightcontroller.odin.master.OdinMaster.clientList = odin_client_list
 
